[gd_scene load_steps=8 format=3 uid="uid://cwkkewybvvxt8"]

[ext_resource type="Script" path="res://scripts/Bow.gd" id="1_oh2q3"]
[ext_resource type="Texture2D" uid="uid://ttev25bb0r64" path="res://guns/armas_spritesheet.png" id="2_jvv1d"]
[ext_resource type="Texture2D" uid="uid://bekpe126enxf" path="res://player/mao_banana_guy.png" id="3_osy04"]

[sub_resource type="Animation" id="Animation_bqh0k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(125.27, 53.1372, 35.2691, 29.8638)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mao_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}

[sub_resource type="Animation" id="Animation_fq3gw"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(125.27, 53.1372, 35.2691, 29.8638), Rect2(82.0411, 53.4593, 15.9454, 30.6746), Rect2(125.144, 52.6515, 35.2691, 30.8098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mao_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(-2, 1, 1),
"update": 0,
"values": [Vector2(-16, 0), Vector2(0, 0), Vector2(-16, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_projectile"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aa4q1"]
_data = {
"RESET": SubResource("Animation_bqh0k"),
"attack": SubResource("Animation_fq3gw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yalak"]
radius = 192.0

[node name="Bow" type="Node2D" groups=["bow"]]
script = ExtResource("1_oh2q3")
tempo_de_recarga_do_ataque = 0.3
attack_damage = 5

[node name="Weapon_Texture" type="Sprite2D" parent="."]
texture = ExtResource("2_jvv1d")
region_enabled = true
region_rect = Rect2(125.27, 53.1372, 35.2691, 29.8638)

[node name="Mao_1" type="Sprite2D" parent="."]
position = Vector2(-16, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_osy04")

[node name="MAO_2" type="Sprite2D" parent="."]
position = Vector2(-3, -10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_osy04")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aa4q1")
}

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_yalak")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
